--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Jays CSS</title>
-	</head>
+	<link rel="stylesheet" type="text/css" href="https://jaythexxvii.github.io/style.css">
+		<head>
+		<font size="+10" face="aptos"> <a href="https://github.com/JayTheXXVII" title="Click to visit my Github.">Jays Github</a> </font>
+		</head>
 	<body>
-		<h1>Jays CSS</h1>
+		<h1>↓CSS↓</h1>
 		<a href="https://jaythexxvii.github.io/RevertX2/RevertX2.css">RevertX2</a>
 		<a href="https://jaythexxvii.github.io/Discord-old-icons/DiscordOldIcons.css">Revert Discord Icons</a>
 		<a href="https://jaythexxvii.github.io/RTL/RTL.css">RTL</a>
