--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		</head>
 	<body>
 		<h1>↓CSS↓</h1>
-		<a href="https://jaythexxvii.github.io/RevertX2/RevertX2.css">RevertX2</a>
-		<a href="https://jaythexxvii.github.io/Discord-old-icons/DiscordOldIcons.css">Revert Discord Icons</a>
-		<font size="+3" face="aptos"> <a href="https://jaythexxvii.github.io/RTL/RTL.css">RTL</a> </font>
+		<font  face="aptos"> <a href="https://jaythexxvii.github.io/RevertX2/RevertX2.css">RevertX2</a> </font>
+		<font  face="aptos"> a href="https://jaythexxvii.github.io/Discord-old-icons/DiscordOldIcons.css">Revert Discord Icons</a> </font>
+		<font  face="aptos"> <a href="https://jaythexxvii.github.io/RTL/RTL.css">RTL</a> </font>
 	</body>
 </html>
