--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<h1>↓CSS↓</h1>
 		<font  face="aptos"> <a href="https://jaythexxvii.github.io/RevertX2/RevertX2.css">RevertX2</a> </font>
-		<font  face="aptos"> a href="https://jaythexxvii.github.io/Discord-old-icons/DiscordOldIcons.css">Revert Discord Icons</a> </font>
+		<font  face="aptos"> <a href="https://jaythexxvii.github.io/Discord-old-icons/DiscordOldIcons.css">Revert Discord Icons</a> </font>
 		<font  face="aptos"> <a href="https://jaythexxvii.github.io/RTL/RTL.css">RTL</a> </font>
 	</body>
 </html>
