--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<link rel="stylesheet" type="text/css" href="https://jaythexxvii.github.io/RTL/style.css">
+	<link rel="stylesheet" type="text/css" href="https://jaythexxvii.github.io/style.css">
 		<head>
 		<font size="+10" face="aptos"> <a href="https://jaythexxvii.github.io" title="Click to return to the Homepage.">Home</a> </font>
 		<font size="+10" face="aptos"> <a href="https://github.com/JayTheXXVII" title="Click to visit my Github.">Jays Github</a> </font>
