--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 		<font size="+10" face="aptos"> <a href="https://github.com/JayTheXXVII" title="Click to visit my Github.">Jays Github</a> </font>
 		</head>
 	<body>
-		<font  size ="-3"face="aptos"> <h1>↓CSS↓</h1> </font>
-		<font  face="aptos"> <a href="https://jaythexxvii.github.io/RevertX2">RevertX2</a> </font>
-		<font  face="aptos"> <a href="https://jaythexxvii.github.io/Discord-old-icons">Revert Discord Icons</a> </font>
-		<font  face="aptos"> <a href="https://jaythexxvii.github.io/RTL">RTL</a> </font>
+		<ul>
+			<font  size ="-3"face="aptos"> <h1>↓CSS↓</h1> </font>
+			<li> <font  face="aptos"> <a href="https://jaythexxvii.github.io/RevertX2">RevertX2</a> </font> </li>
+			<li> <font  face="aptos"> <a href="https://jaythexxvii.github.io/Discord-old-icons">Revert Discord Icons</a> </font> </li>
+			<li> <font  face="aptos"> <a href="https://jaythexxvii.github.io/RTL">RTL</a> </font> </li>
+		</ul>
 	</body>
 	<body>
 		<font  face="aptos"> <h1> <a href="https://jaythexxvii.github.io/RTL/RTL.css">RTL</a> </h1> </font>
