--- a/index.html
+++ b/index.html
@@ -18,7 +18,128 @@
 	<body>
 		<font  face="aptos"> <h1> <a href="https://jaythexxvii.github.io/RTL/RTL.css">RTL</a> </h1> </font>
 		<font  face="aptos"> <p1>
-.Root__right-sidebar>[Aria-label="Now playing view"],.ffFwfKcPDbmAPLXzxzKq[Aria-label="Now playing view"],[Aria-label="Friend Activity"]{min-width:-webkit-fill-available!important}.Root__now-playing-bar{background:var(--background)}.main-buddyFeed-content,.ugPGmh_iv4lIuZkY1ZnL{margin-bottom:150px;max-height:320px}.ffFwfKcPDbmAPLXzxzKq[aria-label="Now playing view"]{align-self:flex-end;height:320px;max-width:280px!important}.ffFwfKcPDbmAPLXzxzKq[aria-label=Queue],[Aria-label="Friend Activity"]{margin-bottom:0!important;align-self:end;height:320px;min-inline-size:-webkit-fill-available;max-width:280px!important}.XOawmCGZcQx4cesyNfVO{display:contents;position:fixed;justify-content:end}button.encore-over-media-set.main-topBar-buddyFeed{height:32px}.Root__right-sidebar{grid-area:left-sidebar!important;pointer-events:none;z-index:4!important;position:relative;width:var(--left-sidebar-width)}html.no-focus-outline.spotify__os--is-windows.spotify__container--is-desktop{--panel-width:280px!important}aside#Desktop_PanelContainer_Id{pointer-events:auto;width:-webkit-fill-available!important;min-width:280px!important;position:fixed}.Root__right-sidebar>[Aria-label=Queue],[Aria-label="Friend Activity"]{min-inline-size:-webkit-fill-available}.main-buddyFeed-content,.ugPGmh_iv4lIuZkY1ZnL{width:280px}.ffFwfKcPDbmAPLXzxzKq{border-radius:8px 8px 0 0}.main-nowPlayingView-content{margin-bottom:unset!important}.main-buddyFeed-header{transform:translateY(8px)}.M5kgcnhbv4Vi_POvYxSZ{padding-block:0px;margin-top:-10px}.StyledTabItem-tab-tabItem-useBrowserDefaultFocusStyle{font-size:1rem;min-block-size:unset}.StyledTabItem-tab-tabItem-useBrowserDefaultFocusStyle::before{bottom:-1px}.StyledTabItem-tab-tabItem-useBrowserDefaultFocusStyle:active,.StyledTabItem-tab-tabItem-useBrowserDefaultFocusStyle:hover{background-color:transparent!important}.Jg9Sdg82oTVV58xFeM2i{padding:0 13px 8px}.zduvaX0Ioxqd5ypeWoAf{padding:0 16px 16px}.main-nowPlayingView-coverArtContainer{min-height:253px!important;min-width:253px!important}.main-nowPlayingView-contextItemInfo{align-items:baseline}.main-nowPlayingView-aboutArtistV2,.main-nowPlayingView-artistOnTour,.main-nowPlayingView-merch{display:none}.main-buddyFeed-content,.main-nowPlayingView-content{margin-top:unset;padding-top:0}.BZj_r1yzmmragvivUCrw{min-height:0}.ZbDMGdU4aBOnrNLowNRq{margin-top:-5px;padding-top:0}.main-buddyFeed-header.QjkE7lL6vDkJZovRnCjA{margin-top:0}.main-nowPlayingView-contextItemInfo .hhFdIYRyHsqlCHy7T_8A{color:red}
+.Root__now-playing-bar {
+	background: var(--background);
+}
+.ugPGmh_iv4lIuZkY1ZnL, .main-buddyFeed-content {
+    width: 280px;
+    margin-bottom: 150px;
+    max-height: 320px;
+}
+/*.main-buddyFeed-container[aria-label="Now playing view"]*/
+.ffFwfKcPDbmAPLXzxzKq[aria-label="Now playing view"] {
+	align-self: flex-end;
+	height: 320px;
+    max-width: 280px !important;
+}
+.ffFwfKcPDbmAPLXzxzKq[Aria-label="Now playing view"], [Aria-label="Friend Activity"] {
+    min-width: -webkit-fill-available !important;
+}
+/*.main-buddyFeed-container[aria-label="Queue"], [Aria-label="Friend Activity"]*/
+.ffFwfKcPDbmAPLXzxzKq[aria-label="Queue"], [Aria-label="Friend Activity"] {
+    margin-bottom: 0px !important;
+    align-self: end;
+    height: 320px;
+	min-inline-size: -webkit-fill-available;
+    max-width: 280px !important;
+}
+.XOawmCGZcQx4cesyNfVO {
+	display: contents;
+    position: fixed;
+    justify-content: end;
+}
+button.encore-over-media-set.main-topBar-buddyFeed {
+    height: 32px;
+}
+.Root__right-sidebar {
+    grid-area: left-sidebar !important;
+    pointer-events: none;
+    z-index: 4 !important;
+    position: relative;
+    width: var(--left-sidebar-width);
+}
+html.no-focus-outline.spotify__os--is-windows.spotify__container--is-desktop {
+    --panel-width: 280px !important;
+}
+aside#Desktop_PanelContainer_Id {
+    pointer-events: auto;
+    width: -webkit-fill-available !important;
+    min-width: 280px !important;
+    position: fixed;
+}
+.Root__right-sidebar > [Aria-label="Queue"], [Aria-label="Friend Activity"] {
+    min-inline-size: -webkit-fill-available;
+}
+.Root__right-sidebar > [Aria-label="Now playing view"], [Aria-label="Friend Activity"] {
+    min-width: -webkit-fill-available !important;
+}
+.ugPGmh_iv4lIuZkY1ZnL, .main-buddyFeed-content {
+	width: 280px;
+}
+/*.main-buddyFeed-container*/
+.ffFwfKcPDbmAPLXzxzKq {
+	border-radius: 8px 8px 0px 0px;
+}
+.main-nowPlayingView-content {
+	padding-top: 0px;
+	margin-bottom: unset !important;
+}
+.main-buddyFeed-header{
+	transform: translateY(8px);
+}
+.M5kgcnhbv4Vi_POvYxSZ {
+	padding-block: 0px;
+    margin-top: -10px;
+}
+.StyledTabItem-tab-tabItem-useBrowserDefaultFocusStyle {
+    font-size: 1rem;
+	min-block-size: unset;
+}
+.StyledTabItem-tab-tabItem-useBrowserDefaultFocusStyle::before {
+    bottom: -1px;
+}
+.StyledTabItem-tab-tabItem-useBrowserDefaultFocusStyle:hover, .StyledTabItem-tab-tabItem-useBrowserDefaultFocusStyle:active {
+    background-color: transparent !important;
+}
+/*Pad Fix*/
+.Jg9Sdg82oTVV58xFeM2i {
+	padding: 0px 13px 8px 13px;
+}
+.zduvaX0Ioxqd5ypeWoAf {
+    padding: 0px 16px 16px 16px;
+}
+/*Unified Album Art Size*/
+.main-nowPlayingView-coverArtContainer {
+	min-height: 253px !important;
+    min-width: 253px !important;
+}
+.main-nowPlayingView-contextItemInfo {
+    align-items: baseline;
+}
+/*Remove Extra Info*/
+.main-nowPlayingView-aboutArtistV2, .main-nowPlayingView-artistOnTour, .main-nowPlayingView-merch {
+    display: none;
+}
+
+/*5/5/24 10:13pm fix*/
+.main-buddyFeed-content, .main-nowPlayingView-content {
+    margin-top: unset;
+    padding-top: 0px;
+}
+.BZj_r1yzmmragvivUCrw {
+    min-height: 0px;
+}
+.ZbDMGdU4aBOnrNLowNRq {
+	margin-top: -5px;
+	padding-top: 0px;
+}
+.main-buddyFeed-header.QjkE7lL6vDkJZovRnCjA {
+	margin-top: 0px;
+}
+/*Heart Fix*/
+.main-nowPlayingView-contextItemInfo .hhFdIYRyHsqlCHy7T_8A {
+    color: #ff0000;
+}
 		</p1> </font>
 	</body>
 </html>
