--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 			<font  size ="-3"face="aptos"> <h1>↓CSS↓</h1> </font>
 			<li> <font  face="aptos"> <a href="https://jaythexxvii.github.io/RevertX2">RevertX2</a> </font> </li>
 			<li> <font  face="aptos"> <a href="https://jaythexxvii.github.io/RTL">RTL</a> </font> </li>
-			<li> <font  face="aptos"> <a href="https://jaythexxvii.github.io/Discord-old-icons">Revert Discord Icons</a> </font> </li>
+			<li> <font  face="aptos"> <a href="https://jaythexxvii.github.io/Discord-old-icons">Discord Old Icons</a> </font> </li>
 			<li> <font  face="aptos"> <a href="https://jaythexxvii.github.io/Red-Metro-For-Steam">Red Metro For Steam</a> </font> </li>
 		</ul>
 	</body>
 	<body>
-		<font  face="aptos"> <h1> <a href="https://jaythexxvii.github.io/RTL/RTL.css">RTL</a> </h1> </font>
+		<font  size ="2" face="aptos"> <h1> <a href="https://github.com/JayTheXXVII/RTL">RTL on GitHub</a> </h1> </font>
+		<font  face="aptos"> <h2> <a href="https://jaythexxvii.github.io/RTL/RTL.css">RTL.css</a> </h2> </font>
 		<font  face="aptos"> <p1>
 .Root__now-playing-bar {
 	background: var(--background);
