--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<link rel="stylesheet" type="text/css" href="https://jaythexxvii.github.io/style.css">
+	<link rel="stylesheet" type="text/css" href="https://jaythexxvii.github.io/Assets/CSS/style.css">
 		<head>
 		<ul>
 			<li> <font size="+10" face="aptos"> <a href="https://jaythexxvii.github.io" title="Click to return to the Homepage.">Home</a> </font> </li>
@@ -21,6 +22,10 @@
 		<font  face="aptos"> <h2> <a href="https://jaythexxvii.github.io/RTL/RTL.css">RTL.css</a> </h2> </font>
 
 <font size = "+10" face="aptos"> <h3> RTL </font> </h3>
+		<img src="https://raw.githubusercontent.com/JayTheXXVII/jaythexxvii.github.io/main/Assets/RTL%20%26%20RevertX2.png" alt="RTL" class="center" />				
+	</body>
+</html>
+
  <div class="row">
   <div class="column">
     <img src="https://raw.githubusercontent.com/JayTheXXVII/jaythexxvii.github.io/main/Assets/RTL%20asset%201.png" alt="Quick View" style="width:100%">
@@ -35,15 +40,6 @@
     <img src="https://raw.githubusercontent.com/JayTheXXVII/jaythexxvii.github.io/main/Assets/RTL%20asset%203.png" alt="Friend Activity" style="width:100%">
   </div>
 </div> 
-
-
-
-	</body>
-</html>
-
-
-
-
 
 
 
