--- a/index.html
+++ b/index.html
@@ -1,47 +1,67 @@
 <!DOCTYPE html>
 <html>
 	<link rel="stylesheet" type="text/css" href="https://jaythexxvii.github.io/style.css">
-	<link rel="stylesheet" type="text/css" href="https://jaythexxvii.github.io/Assets/CSS/style.css">
-		<head>
-		<ul>
-			<li> <font size="+10" face="aptos"> <a href="https://jaythexxvii.github.io" title="Click to return to the Homepage.">Home</a> </font> </li>
-			<li> <font size="+10" face="aptos"> <a href="https://github.com/JayTheXXVII" title="Click to visit my Github.">Github</a> </font> </li>
-		</ul>
-		</head>
-	<body>
-		<ul>
-			<font  size ="-3"face="aptos"> <h1>↓CSS↓</h1> </font>
-			<li> <font  face="aptos"> <a href="https://jaythexxvii.github.io/RevertX2">RevertX2</a> </font> </li>
-			<li> <font  face="aptos"> <a href="https://jaythexxvii.github.io/RTL">RTL</a> </font> </li>
-			<li> <font  face="aptos"> <a href="https://jaythexxvii.github.io/Red-Metro-For-Steam">Red Metro For Steam</a> </font> </li>
-			<li> <font  face="aptos"> <a href="https://jaythexxvii.github.io/Discord-old-icons">Discord Old Icons</a> </font> </li>
-		</ul>
-	</body>
-	<body>
-		<font  size ="2" face="aptos"> <h1> <a href="https://github.com/JayTheXXVII/RTL">RTL on GitHub</a> </h1> </font>
-		<font  face="aptos"> <h2> <a href="https://jaythexxvii.github.io/RTL/RTL.css">RTL.css</a> </h2> </font>
+	<link rel="stylesheet" type="text/css" href="https://jaythexxvii.github.io/Assets/CSS/XXVII.css">
 
-<font size = "+10" face="aptos"> <h3> RTL </font> </h3>
-		<img src="https://raw.githubusercontent.com/JayTheXXVII/jaythexxvii.github.io/main/Assets/RTL%20%26%20RevertX2.png" alt="RTL" class="center" />				
-	</body>
-</html>
-
- <div class="row">
-  <div class="column">
-    <img src="https://raw.githubusercontent.com/JayTheXXVII/jaythexxvii.github.io/main/Assets/RTL%20asset%201.png" alt="Quick View" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="https://raw.githubusercontent.com/JayTheXXVII/jaythexxvii.github.io/main/Assets/RTL%20asset.png" alt="Queue" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="https://raw.githubusercontent.com/JayTheXXVII/jaythexxvii.github.io/main/Assets/RTL%20asset%202.png" alt="Recently Played" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="https://raw.githubusercontent.com/JayTheXXVII/jaythexxvii.github.io/main/Assets/RTL%20asset%203.png" alt="Friend Activity" style="width:100%">
+ <div class="XXVII">
+  <div class="XXVII">
+	<div class="Glitch" title="XXVII">XXVII</div>
   </div>
 </div> 
 
 
 
+<!DOCTYPE html>
+<html>
+<link rel="stylesheet" type="text/css" href="https://jaythexxvii.github.io/Assets/CSS/dropdown.css"  />
+<link rel="stylesheet" type="text/css" href="https://jaythexxvii.github.io/Assets/CSS/style.css">
 
-
+<header class="main-header">
+  <a class="logo" href="https://jaythexxvii.github.io/">  <img src="https://raw.githubusercontent.com/JayTheXXVII/jaythexxvii.github.io/main/Assets/Monkey.png" alt="XXVII"> </a>
+  <ul class="main-nav">
+    <li><a class="RTL-Raw" href="https://jaythexxvii.github.io/RTL/RTL.css">Raw</a></li>
+	<li><a class="RTL-Git" href="https://github.com/JayTheXXVII/RTL">RTL</a></li>
+    <li><a href="https://jaythexxvii.github.io">Home</a></li>
+    <li><a href="https://github.com/JayTheXXVII">Github</a></li>
+    <li class="dropdown">
+      <a href="#">CSS</a>
+      <ul class="drop-nav">
+        <li><a href="https://jaythexxvii.github.io/RevertX2">RevertX2</a></li>
+        <li><a href="https://jaythexxvii.github.io/RTL">RTL</a></li>
+        <li class="flyout">
+          <a href="https://jaythexxvii.github.io/Red-Metro-For-Steam">Red Metro</a>
+          <ul class="flyout-nav">
+            <li><a href="https://jaythexxvii.github.io/Red-Metro-For-Steam/libraryroot-custom-css/">libraryroot.custom.css</a></li>
+            <li><a href="https://jaythexxvii.github.io/Red-Metro-For-Steam/friends-custom-css/">friends.custom.css</a></li>
+            <li><a href="https://jaythexxvii.github.io/Red-Metro-For-Steam/notifications-custom-css/">notifications.custom.css</a></li>
+			<li><a href="https://jaythexxvii.github.io/Red-Metro-For-Steam/webkit-css/">webkit.css</a></li>
+			<li><a href="https://jaythexxvii.github.io/Red-Metro-For-Steam/theme-json/">theme.json</a></li>
+			<li><a href="https://jaythexxvii.github.io/Red-Metro-For-Steam/skin-json/">skin.json</a></li>
+          </ul>
+        </li>
+        <li><a href="https://jaythexxvii.github.io/Discord-old-icons/">Discord Old Icons</a></li>       
+      </ul>
+    </li>
+  </ul>
+</header>
+	<header class="RTL-Nav">
+		<body>
+			<font size = "+10" face="aptos"> <h3> RTL </font> </h3>
+			<img src="https://raw.githubusercontent.com/JayTheXXVII/jaythexxvii.github.io/main/Assets/RTL%20%26%20RevertX2.png" alt="RTL" class="center" />				
+		<div class="row">
+			<div class="column">
+			<img src="https://raw.githubusercontent.com/JayTheXXVII/jaythexxvii.github.io/main/Assets/RTL%20asset%201.png" alt="Quick View" style="width:100%">
+		</div>
+		<div class="column">
+			<img src="https://raw.githubusercontent.com/JayTheXXVII/jaythexxvii.github.io/main/Assets/RTL%20asset.png" alt="Queue" style="width:100%">
+		</div>
+		<div class="column">
+			<img src="https://raw.githubusercontent.com/JayTheXXVII/jaythexxvii.github.io/main/Assets/RTL%20asset%202.png" alt="Recently Played" style="width:100%">
+		</div>
+		<div class="column">
+			<img src="https://raw.githubusercontent.com/JayTheXXVII/jaythexxvii.github.io/main/Assets/RTL%20asset%203.png" alt="Friend Activity" style="width:100%">
+		</div>
+		</div> 
+	</body>
+	</header>
+</html>
