--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <li><a class="RTL-Raw" href="https://jaythexxvii.github.io/RTL/RTL.css">Raw</a></li>
 	<li><a class="RTL-Git" href="https://github.com/JayTheXXVII/RTL">RTL</a></li>
     <li><a href="https://jaythexxvii.github.io">Home</a></li>
-    <li><a href="https://github.com/JayTheXXVII">Github</a></li>
+    <li><a class="Git" href="https://github.com/JayTheXXVII">Github</a></li>
     <li class="dropdown">
       <a href="#">CSS</a>
       <ul class="drop-nav">
