--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
       <ul class="drop-nav">
         <li><a href="https://jaythexxvii.github.io/RevertX2">RevertX2</a></li>
         <li><a href="https://jaythexxvii.github.io/RTL">RTL</a></li>
-        <li class="flyout">
+        <li><a href="https://jaythexxvii.github.io/Red-Metro-For-Steam/">Red Metro</a></li>  
+        <li><a href="https://jaythexxvii.github.io/Discord-old-icons/">Discord Old Icons</a></li>
+<!--        <li class="flyout">
           <a href="https://jaythexxvii.github.io/Red-Metro-For-Steam">Red Metro</a>
           <ul class="flyout-nav">
             <li><a href="https://jaythexxvii.github.io/Red-Metro-For-Steam/libraryroot-custom-css/">libraryroot.custom.css</a></li>
@@ -38,8 +40,7 @@
 			<li><a href="https://jaythexxvii.github.io/Red-Metro-For-Steam/theme-json/">theme.json</a></li>
 			<li><a href="https://jaythexxvii.github.io/Red-Metro-For-Steam/skin-json/">skin.json</a></li>
           </ul>
-        </li>
-        <li><a href="https://jaythexxvii.github.io/Discord-old-icons/">Discord Old Icons</a></li>       
+        </li> -->   
       </ul>
     </li>
   </ul>
