--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </header>
 	<header class="RTL-Nav">
 		<body>
-			<font size = "+10" face="aptos"> <h2 class="RTL-Header"> RTL </font> </h2>
+			<font size = "+10" face="Arial"> <h2 class="RTL-Header"> RTL </font> </h2>
 			<img src="https://raw.githubusercontent.com/JayTheXXVII/jaythexxvii.github.io/main/Assets/RTL%20%26%20RevertX2.png" alt="RTL" class="center" />				
 		<div class="row">
 			<div class="column">
