--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
         <li><a href="https://jaythexxvii.github.io/RevertX2">RevertX2</a></li>
 		<li><a href="https://jaythexxvii.github.io/RevertX2-Legacy">RevertX2-Legacy</a></li>
         <li><a href="https://jaythexxvii.github.io/RTL">RTL</a></li>
-        <li><a href="https://jaythexxvii.github.io/Red-Metro-For-Steam/">Red Metro</a></li>  
+        <li><a href="https://jaythexxvii.github.io/Red-Metro-For-Steam/">Red Metro</a></li>
         <li><a href="https://jaythexxvii.github.io/Discord-old-icons/">Discord Old Icons</a></li>
+        <li><a href="https://jaythexxvii.github.io/unRefreshed/">unRefreshed</a></li>
 <!--        <li class="flyout">
           <a href="https://jaythexxvii.github.io/Red-Metro-For-Steam">Red Metro</a>
           <ul class="flyout-nav">
