--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <li><a href="https://jaythexxvii.github.io/Red-Metro-For-Steam/">Red Metro</a></li>
         <li><a href="https://jaythexxvii.github.io/Discord-old-icons/">Discord Old Icons</a></li>
         <li><a href="https://jaythexxvii.github.io/unRefreshed/">unRefreshed</a></li>
+		<li><a href="https://jaythexxvii.github.io/Tidalify/">Tidalify</a></li>
 <!--        <li class="flyout">
           <a href="https://jaythexxvii.github.io/Red-Metro-For-Steam">Red Metro</a>
           <ul class="flyout-nav">
