--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <ul class="drop-nav">
         <li><a href="https://jaythexxvii.github.io/RevertX2">RevertX2</a></li>
 		<li><a href="https://jaythexxvii.github.io/RevertX2-Legacy">RevertX2-Legacy</a></li>
+		<li><a href="https://jaythexxvii.github.io/RevertX2-Test">RevertX2-Test</a></li>
         <li><a href="https://jaythexxvii.github.io/RTL">RTL</a></li>
         <li><a href="https://jaythexxvii.github.io/Red-Metro-For-Steam/">Red Metro</a></li>
         <li><a href="https://jaythexxvii.github.io/Discord-old-icons/">Discord Old Icons</a></li>
